--- a/components/admission-widget.module.scss
+++ b/components/admission-widget.module.scss
@@ -6,12 +6,12 @@
   transition: 0.3s;
   text-decoration: none;
   border-radius: 0 5px 5px 0;
-  transform: rotate(-90deg) translateY(13.5rem);
+  transform: rotate(-90deg) translateY(12.25rem);
   &:hover {
-    transform: rotate(-90deg) translateY(4rem);
+    transform: rotate(-90deg) translateY(3.5rem);
   }
   & > button {
-    padding: 0.7em 1.5rem;
+    padding: 1rem 1.5rem;
     width: 100%;
     background: #c32938;
     border: none;
@@ -25,14 +25,16 @@
   }
   .content {
     background: #fff;
-    padding: 1rem;
+    padding: 0rem;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     a {
       display: block;
-      letter-spacing: 0.4px;
+      letter-spacing: 0.5px;
       word-spacing: 3px;
-      padding: 1rem;
+      padding: 1.25rem;
       text-align: center;
       text-transform: uppercase;
+      font-size: 1.4rem;
       &:hover {
         background: #f4b442;
       }
