mobile ui css refinements

--- a/components/admission-widget.module.scss
+++ b/components/admission-widget.module.scss
@@ -41,3 +41,12 @@
     }
   }
 }
+
+@media (max-width: 480px) {
+  .widget {
+    transform: rotate(-90deg) translateY(12rem);
+    &:hover {
+      transform: rotate(-90deg) translateY(3rem);
+    }
+  }
+}
