--- a/components/accordion.module.scss
+++ b/components/accordion.module.scss
@@ -24,6 +24,12 @@
   }
 }
 
+.itemBtnExpanded {
+  svg {
+    transform: rotate(180deg);
+  }
+}
+
 .header {
   cursor: pointer;
   display: flex;
@@ -31,6 +37,7 @@
   gap: 1rem;
   svg {
     width: 2%;
+    transition: transform 0.25s cubic-bezier(0, 0, 0, 1);
   }
   & > div {
     display: flex;
