--- a/components/menu-dropdown.module.scss
+++ b/components/menu-dropdown.module.scss
@@ -1,6 +1,6 @@
 .menu_dropdown {
   position: absolute;
-  top: 103%;
+  top: 100%;
   right: auto;
   left: auto;
   box-shadow: 0 10px 15px -3px rgba(46, 41, 51, 0.08),
@@ -13,6 +13,7 @@
   background-color: #fff;
   display: none;
   width: max-content;
+  border-top: 1px solid #e0e0e0;
   li {
     list-style-type: none;
   }
@@ -26,4 +27,10 @@
   position: absolute;
   left: 100%;
   top: -7px;
+}
+
+@media (max-width: 768px) {
+  .menu_dropdown {
+    border-top: none;
+  }
 }
