minor layout update for mobile

--- a/app/schools/engineering-and-science/page.module.scss
+++ b/app/schools/engineering-and-science/page.module.scss
@@ -98,9 +98,8 @@
 
 @media (max-width: 480px) {
   .header {
-    padding: 3rem 2rem;
-    height: 22.5vh;
-    align-items: flex-start;
+    padding: 2rem;
+    height: 25vh;
     h1 {
       font-size: 2.4rem;
       display: flex;
