imporoved multi level menu ux

--- a/components/menu-item.module.scss
+++ b/components/menu-item.module.scss
@@ -20,24 +20,36 @@
       margin-left: 1rem;
     }
   }
+  svg {
+    transition: 0.3s cubic-bezier(0, 0, 0, 1);
+  }
 }
 
 .nested {
   a,
   button {
     font-size: 1.5rem;
-    margin: 0 1.5rem;
+    margin: 0;
+    padding: 0.5rem 1.25rem;
+    width: 100%;
   }
+
   &:last-child {
-    margin-bottom: 0.7rem;
+    a,
+    button {
+      padding-bottom: 1rem;
+    }
   }
   &:first-child {
-    margin-top: 1rem;
-    margin-bottom: 1rem;
+    a,
+    button {
+      padding-top: 1rem;
+    }
   }
-  &:not(:last-child) {
-    margin-bottom: 1rem;
-  }
+}
+
+.arrow_open {
+  transform: rotate(180deg);
 }
 
 @media (max-width: 480px) {
