--- a/components/fees.module.scss
+++ b/components/fees.module.scss
@@ -103,8 +103,10 @@
   }
   .fee {
     h3 {
+      padding: 1rem 0.5rem 1rem 1.5rem;
       font-size: 1.4rem;
       width: 65%;
+      line-height: 2.4;
     }
     h4 {
       width: 35%;
