--- a/components/fees.module.scss
+++ b/components/fees.module.scss
@@ -22,10 +22,12 @@
     padding: 1rem 2rem;
     display: flex;
     background-color: #eff1f4;
+		border-radius: 4px 0 0 4px;
   }
   h4 {
     padding: 1rem 2rem;
     background-color: #f3b041;
+		border-radius: 0 4px 4px 0;
   }
 }
 
