--- a/components/fees.module.scss
+++ b/components/fees.module.scss
@@ -16,18 +16,19 @@
 
 .fee {
   display: flex;
-  height: fit-content;
 
   h3 {
     padding: 1rem 2rem;
     display: flex;
     background-color: #eff1f4;
-		border-radius: 4px 0 0 4px;
+    border-radius: 4px 0 0 4px;
+    line-height: 2.8rem;
   }
   h4 {
     padding: 1rem 2rem;
     background-color: #f3b041;
-		border-radius: 0 4px 4px 0;
+    border-radius: 0 4px 4px 0;
+    line-height: 2.8rem;
   }
 }
 
@@ -52,6 +53,22 @@
       line-height: 2;
     }
   }
+  .fee {
+    width: max-content;
+    margin-left: auto;
+    h3 {
+      border-radius: 4px 0 0 4px;
+      flex-shrink: 0;
+      width: max-content;
+
+      padding: 1rem 2rem;
+    }
+    h4 {
+      border-radius: 0 4px 0 0;
+      flex-shrink: 0;
+      width: max-content;
+    }
+  }
 }
 
 .header {
@@ -73,7 +90,7 @@
   }
   h2 {
     margin: 1rem 0;
-    font-size: 2.2rem;
+    font-size: 2.1rem;
   }
   p {
     line-height: 2.2rem;
@@ -105,20 +122,31 @@
   }
   .fee {
     h3 {
-      padding: 1rem 0.5rem 1rem 1.5rem;
+      padding: 0.5rem 1rem;
       font-size: 1.4rem;
       width: 65%;
       line-height: 2.4;
     }
     h4 {
       width: 35%;
+      padding: 0.5rem 1rem;
       font-size: 1.2rem;
+      line-height: 2.8;
     }
   }
   .accomodation {
     margin-top: 2rem;
     ul {
       width: 100%;
+    }
+    .fee {
+      h3 {
+        padding: 0.5rem 1rem;
+      }
+      h4 {
+        padding: 0.5rem 1rem;
+        line-height: 2.8;
+      }
     }
   }
   .header {
