--- a/app/schools/engineering-and-science/faculty/[slug]/page.module.scss
+++ b/app/schools/engineering-and-science/faculty/[slug]/page.module.scss
@@ -1,6 +1,8 @@
 .section {
-  padding: 3rem 0;
+  padding: 2rem 0;
   & > div {
+    background: #fff;
+    box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px;
     display: flex;
     align-items: flex-start;
     background: #fff;
@@ -10,12 +12,10 @@
 
 .profile {
   width: 25%;
-  //background: #c32939;
-  //box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px;
-  padding: 4rem 4rem;
+  padding: 4rem 1.5rem 4rem 5rem;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  // align-items: center;
 
   img {
     border-radius: 50%;
@@ -25,12 +25,12 @@
 
   & > h1,
   & > h3 {
-    text-align: center;
+    // text-align: center;
     margin-bottom: 0.25rem;
   }
 
   & > h3 {
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
     font-size: 1.3rem;
   }
 
@@ -50,21 +50,51 @@
 }
 
 .qualification {
-  margin: 3rem 0 0;
+  margin: 2rem 0 0;
   & > div {
     &:not(:last-child) {
-      margin-bottom: 2rem;
+      margin-bottom: 1rem;
     }
   }
   h2 {
     font-size: 1.7rem;
     margin-bottom: 1rem;
   }
+  h3 {
+    font-size: 1.5rem;
+  }
+}
+
+.awards {
+  width: 100%;
+  margin-top: 2rem;
+  h2 {
+    font-size: 1.7rem;
+    margin-bottom: 1rem;
+  }
+  li {
+    display: flex;
+    list-style-type: none;
+    line-height: 1.4;
+    margin-bottom: 0.7rem;
+    border-bottom: 2px solid #edeef2;
+    padding-bottom: 0.75rem;
+    p {
+      line-height: 1.5;
+    }
+    svg {
+      flex-shrink: 0;
+      margin-right: 1rem;
+      margin-top: 0.5rem;
+      width: 16px;
+      height: 16px;
+    }
+  }
 }
 
 .main {
   width: 75%;
-  padding: 3rem;
+  padding: 4rem 4rem 4rem 1.5rem;
 
   h2 {
     margin-bottom: 1rem;
@@ -77,8 +107,30 @@
 }
 
 .interests {
+  border: 1px solid #e7e7e7;
+  border-top-color: rgb(231, 231, 231);
+  border-top-style: solid;
+  border-top-width: 1px;
+  border-top: 3px solid #b4383d;
+  padding: 2rem;
   p {
     font-size: 1.6rem;
+  }
+}
+
+.courses {
+  border: 1px solid #e7e7e7;
+  border-top-color: rgb(231, 231, 231);
+  border-top-style: solid;
+  border-top-width: 1px;
+  border-top: 3px solid #b4383d;
+  padding: 2rem;
+  ul {
+    padding-left: 2rem;
+    li {
+      line-height: 1.8;
+      font-size: 1.5rem;
+    }
   }
 }
 
@@ -122,6 +174,35 @@
   }
 }
 
+.books {
+  border: 1px solid #e7e7e7;
+  border-top-color: rgb(231, 231, 231);
+  border-top-style: solid;
+  border-top-width: 1px;
+  border-top: 3px solid #b4383d;
+  padding: 2rem;
+  ul {
+    display: flex;
+    gap: 1rem;
+    padding: 1rem;
+    overflow: scroll;
+    li {
+      flex: 0 0 30%;
+      list-style-type: none;
+      display: flex;
+      gap: 1rem;
+      img {
+        border-radius: 5px;
+        height: 150px;
+        width: 100px;
+      }
+      p {
+        margin-top: 1rem;
+      }
+    }
+  }
+}
+
 @media (max-width: 768px) {
   .section {
     padding: 0;
@@ -136,19 +217,31 @@
     img {
       margin: 2rem auto 4rem;
     }
+    & > h1 {
+      text-align: center;
+    }
     & > h1,
     h3 {
       margin: 0 auto;
     }
     & > h3 {
-      margin: 0 auto 2rem;
+      margin: 0 auto 3rem;
     }
   }
   .main {
     width: 100%;
     padding: 1rem;
   }
-  .interests {
-    padding: 0 1rem;
+  .authors {
+    row-gap: 5px;
+  }
+  .books {
+    ul {
+      flex-direction: column;
+      gap: 2rem;
+      li {
+        width: 100%;
+      }
+    }
   }
 }
