--- a/app/schools/engineering-and-science/faculty/[slug]/page.module.scss
+++ b/app/schools/engineering-and-science/faculty/[slug]/page.module.scss
@@ -70,7 +70,7 @@
   margin-top: 2rem;
   h2 {
     font-size: 1.7rem;
-    margin-bottom: 1rem;
+    margin-bottom: 1.5rem;
   }
   li {
     display: flex;
@@ -111,7 +111,7 @@
   border-top-color: rgb(231, 231, 231);
   border-top-style: solid;
   border-top-width: 1px;
-  border-top: 3px solid #b4383d;
+  border-top: 3px solid #c32939;
   padding: 2rem;
   p {
     font-size: 1.6rem;
@@ -123,7 +123,7 @@
   border-top-color: rgb(231, 231, 231);
   border-top-style: solid;
   border-top-width: 1px;
-  border-top: 3px solid #b4383d;
+  border-top: 3px solid #c32939;
   padding: 2rem;
   ul {
     padding-left: 2rem;
@@ -179,7 +179,7 @@
   border-top-color: rgb(231, 231, 231);
   border-top-style: solid;
   border-top-width: 1px;
-  border-top: 3px solid #b4383d;
+  border-top: 3px solid #c32939;
   padding: 2rem;
   ul {
     display: flex;
