--- a/app/campus-life/page.module.scss
+++ b/app/campus-life/page.module.scss
@@ -35,15 +35,16 @@
 
   p {
     margin: 2rem 0;
+    font-size: 1.5rem;
     line-height: 2;
     //color: #fff;
     display: block;
     &:first-of-type {
-      padding-bottom: 2rem;
+      // padding-bottom: 2rem;
       //border-bottom: 1px solid #444;
     }
     &:last-of-type {
-      padding-left: 3rem;
+      padding-left: 2.5rem;
       border-left: 4px solid #ffb013;
       line-height: 2;
       margin-top: 1rem;
@@ -60,6 +61,8 @@
     height: 100%;
     object-fit: cover;
     border-radius: 3px;
+  }
+  a {
     &:nth-child(2) {
       grid-row: span 2;
     }
