--- a/app/schools/engineering-and-science/faculty/[slug]/page.module.scss
+++ b/app/schools/engineering-and-science/faculty/[slug]/page.module.scss
@@ -111,7 +111,7 @@
   border-top-color: rgb(231, 231, 231);
   border-top-style: solid;
   border-top-width: 1px;
-  border-top: 3px solid #c32939;
+  border-top: 3px solid #f4b442;
   padding: 2rem;
   p {
     font-size: 1.6rem;
@@ -123,7 +123,7 @@
   border-top-color: rgb(231, 231, 231);
   border-top-style: solid;
   border-top-width: 1px;
-  border-top: 3px solid #c32939;
+  border-top: 3px solid #f4b442;
   padding: 2rem;
   ul {
     padding-left: 2rem;
@@ -179,7 +179,7 @@
   border-top-color: rgb(231, 231, 231);
   border-top-style: solid;
   border-top-width: 1px;
-  border-top: 3px solid #c32939;
+  border-top: 3px solid #f4b442;
   padding: 2rem;
   ul {
     display: flex;
