--- a/app/schools/engineering-and-science/page.module.scss
+++ b/app/schools/engineering-and-science/page.module.scss
@@ -89,9 +89,11 @@
     h4 {
       margin-top: 0.15rem;
       font-weight: 400;
+      margin-bottom: 1rem;
+      text-align: center;
     }
     a {
-      margin: 2rem auto 0;
+      margin-top: auto;
     }
   }
 }
