--- a/app/schools/engineering-and-science/faculty/[slug]/page.module.scss
+++ b/app/schools/engineering-and-science/faculty/[slug]/page.module.scss
@@ -29,6 +29,11 @@
     margin-bottom: 0.25rem;
   }
 
+  h1 {
+    line-height: 1;
+    margin-bottom: 0.75rem;
+  }
+
   & > h3 {
     margin-bottom: 2rem;
     font-size: 1.3rem;
