--- a/app/schools/engineering-and-science/faculty/[slug]/page.module.scss
+++ b/app/schools/engineering-and-science/faculty/[slug]/page.module.scss
@@ -135,6 +135,11 @@
     li {
       line-height: 1.8;
       font-size: 1.5rem;
+      a {
+        span {
+          color: #493076;
+        }
+      }
     }
   }
 }
