improved widget button styling and usability

--- a/components/admission-widget.module.scss
+++ b/components/admission-widget.module.scss
@@ -1,14 +1,16 @@
 .widget {
   position: fixed;
+  display: flex;
+  align-items: center;
   z-index: 10;
   top: 40%;
   right: 0;
   transition: 0.3s;
   text-decoration: none;
   border-radius: 0 5px 5px 0;
-  transform: rotate(-90deg) translateY(18.25rem);
+  transform: translateX(14.5rem);
   &:hover {
-    transform: rotate(-90deg) translateY(1.5rem);
+    transform: translateX(1rem);
   }
   & > button {
     padding: 1rem 1.5rem;
@@ -22,6 +24,7 @@
     border-top-left-radius: 10px;
     color: #fff;
     text-decoration: none;
+    transform: rotate(270deg) translateY(10rem);
   }
   .content {
     background: #fff;
@@ -44,9 +47,13 @@
 
 @media (max-width: 480px) {
   .widget {
-    transform: rotate(-90deg) translateY(18rem);
+    transform: translateX(13rem);
     &:hover {
-      transform: rotate(-90deg) translateY(0.5rem);
+      transform: translateX(1rem);
+    }
+    & > button {
+      padding: 1rem 2rem;
+      transform: rotate(270deg) translateY(11rem);
     }
   }
 }
