--- a/components/header.module.scss
+++ b/components/header.module.scss
@@ -88,7 +88,11 @@
 }
 
 @media (max-width: 480px) {
+  .header {
+    border-bottom: 1px solid rgba(120, 31, 25, 0.24);
+  }
   .main {
+    border-bottom: none;
     padding: 0.8rem 0;
     .logo {
       svg {
