--- a/app/schools/engineering-and-science/faculty/[slug]/page.module.scss
+++ b/app/schools/engineering-and-science/faculty/[slug]/page.module.scss
@@ -35,8 +35,10 @@
   }
 
   & > h3 {
-    margin-bottom: 2rem;
-    font-size: 1.3rem;
+    font-size: 1.4rem;
+    &:last-of-type {
+      margin-bottom: 2rem;
+    }
   }
 
   p {
