--- a/app/schools/engineering-and-science/page.module.scss
+++ b/app/schools/engineering-and-science/page.module.scss
@@ -91,8 +91,10 @@
     h4 {
       margin-top: 0.15rem;
       font-weight: 400;
-      margin-bottom: 1rem;
       text-align: center;
+      &:last-of-type {
+        margin-bottom: 1rem;
+      }
     }
     a {
       margin-top: auto;
