--- a/app/schools/engineering-and-science/faculty/[slug]/page.module.scss
+++ b/app/schools/engineering-and-science/faculty/[slug]/page.module.scss
@@ -168,6 +168,14 @@
   }
   h3 {
     margin-bottom: 1.25rem !important;
+    span {
+      display: flex;
+      align-items: flex-end;
+      svg,
+      img {
+        margin-right: 0.5rem;
+      }
+    }
   }
 }
 
