--- a/app/schools/engineering-and-science/faculty/[slug]/page.module.scss
+++ b/app/schools/engineering-and-science/faculty/[slug]/page.module.scss
@@ -38,6 +38,8 @@
     font-size: 1.4rem;
     &:last-of-type {
       margin-bottom: 2rem;
+      //text-align: center;
+      margin-top: 0.5rem;
     }
   }
 
@@ -83,9 +85,9 @@
     display: flex;
     list-style-type: none;
     line-height: 1.4;
-    margin-bottom: 1rem;
+    margin-bottom: 1.15rem;
     border-bottom: 2px solid #edeef2;
-    padding-bottom: 1rem;
+    padding-bottom: 1.15rem;
     p {
       line-height: 1.5;
     }
@@ -121,7 +123,8 @@
   border-top: 3px solid #f4b442;
   padding: 2rem;
   p {
-    font-size: 1.6rem;
+    font-size: 1.5rem;
+    line-height: 1.7;
   }
 }
 
@@ -135,8 +138,9 @@
   ul {
     padding-left: 2rem;
     li {
-      line-height: 1.8;
       font-size: 1.5rem;
+      line-height: 1.5;
+      margin-bottom: 1rem;
       a {
         span {
           color: #493076;
@@ -173,6 +177,8 @@
       align-items: flex-end;
       svg,
       img {
+        height: 32px;
+        width: 32px;
         margin-right: 0.5rem;
       }
     }
@@ -246,7 +252,8 @@
     }
     & > h3 {
       &:last-of-type {
-        margin-bottom: 0 auto 3rem;
+        margin: 1rem auto 2rem;
+        text-align: center;
       }
     }
   }
@@ -256,6 +263,11 @@
   }
   .authors {
     row-gap: 5px;
+  }
+  .paper {
+    h3 {
+      font-size: 1.5rem;
+    }
   }
   .books {
     ul {
