--- a/app/schools/engineering-and-science/faculty/[slug]/page.module.scss
+++ b/app/schools/engineering-and-science/faculty/[slug]/page.module.scss
@@ -267,6 +267,14 @@
   .paper {
     h3 {
       font-size: 1.5rem;
+      span {
+        align-items: flex-start;
+        svg {
+          height: 24px;
+          width: 48px;
+          margin-right: 1rem;
+        }
+      }
     }
   }
   .books {
