--- a/app/campus-life/page.module.scss
+++ b/app/campus-life/page.module.scss
@@ -1,33 +1,19 @@
 .campus {
   padding: 3rem 0;
-  @media (max-width: 480px) {
-    padding: 1rem 0;
-  }
-  //background-color: #d50032;
   & > div {
     display: grid;
     grid-template-columns: 2fr 3fr;
     gap: 3rem;
     align-items: center;
-    @media (max-width: 480px) {
-      grid-template-columns: 1fr;
-    }
   }
 }
 
 .content {
   padding: 3rem;
-  @media (max-width: 480px) {
-    padding: 1rem 2rem;
-  }
   h2 {
-    //color: #fff;
     font-size: 5rem;
     letter-spacing: -2px;
     line-height: 6rem;
-    @media (max-width: 480px) {
-      font-size: 4rem;
-    }
     span {
       color: #ffb013;
     }
@@ -37,12 +23,7 @@
     margin: 2rem 0;
     font-size: 1.5rem;
     line-height: 2;
-    //color: #fff;
     display: block;
-    &:first-of-type {
-      // padding-bottom: 2rem;
-      //border-bottom: 1px solid #444;
-    }
     &:last-of-type {
       padding-left: 2.5rem;
       border-left: 4px solid #ffb013;
@@ -65,6 +46,34 @@
   a {
     &:nth-child(2) {
       grid-row: span 2;
+    }
+  }
+}
+
+.gallery {
+  width: fit-content;
+  margin: 0 auto 3rem;
+}
+
+@media (max-width: 480px) {
+  .campus {
+    padding: 1rem 0;
+    & > div {
+      grid-template-columns: 1fr;
+    }
+  }
+  .content {
+    padding: 1rem 2rem;
+    h2 {
+      font-size: 4rem;
+    }
+  }
+  .gallery {
+    margin: 2.5rem 1rem;
+    img {
+      &:not(:last-child) {
+        margin-bottom: 0.75rem;
+      }
     }
   }
 }
