--- a/components/admissions-downloadable.module.scss
+++ b/components/admissions-downloadable.module.scss
@@ -19,14 +19,14 @@
 
 @media (max-width: 768px) {
   .section {
-    padding: 2rem 1rem;
+    padding: 3rem 1rem 4rem;
     & > div {
       flex-direction: column;
     }
     p {
       font-size: 1.5rem;
       text-align: center;
-      margin-bottom: 1.5rem;
+      margin-bottom: 2.5rem;
     }
   }
   .buttons {
