improved admissions widget layout

--- a/components/admission-widget.module.scss
+++ b/components/admission-widget.module.scss
@@ -1,14 +1,16 @@
 .widget {
   position: fixed;
+  display: flex;
+  align-items: center;
   z-index: 10;
   top: 40%;
   right: 0;
   transition: 0.3s;
   text-decoration: none;
   border-radius: 0 5px 5px 0;
-  transform: rotate(-90deg) translateY(18.25rem);
+  transform: translateX(34.5rem);
   &:hover {
-    transform: rotate(-90deg) translateY(1.5rem);
+    transform: translateX(20.5rem);
   }
   & > button {
     padding: 1rem 1.5rem;
@@ -22,8 +24,10 @@
     border-top-left-radius: 10px;
     color: #fff;
     text-decoration: none;
+    transform: rotate(-90deg) translateY(-10rem);
   }
   .content {
+    transform: translateX(-20.1rem);
     background: #fff;
     padding: 0rem;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
@@ -44,9 +48,13 @@
 
 @media (max-width: 480px) {
   .widget {
-    transform: rotate(-90deg) translateY(18rem);
+    transform: translateX(34.3rem);
     &:hover {
-      transform: rotate(-90deg) translateY(0.5rem);
+      // transform: translateX(1rem);
+    }
+    & > button {
+      padding: 1rem 2rem;
+      //transform: rotate(270deg) translateY(11rem);
     }
   }
 }
