--- a/components/social-media.module.scss
+++ b/components/social-media.module.scss
@@ -32,6 +32,7 @@
 
 @media (max-width: 768px) {
   .section {
+    padding: 3rem 0 5rem;
     & > div {
       flex-wrap: wrap;
       gap: 2rem;
@@ -43,6 +44,9 @@
     }
     a {
       flex: 0 0 calc(33% - 2rem);
+    }
+    p {
+      font-size: 1.2rem;
     }
   }
 }
