--- a/components/social-media.module.scss
+++ b/components/social-media.module.scss
@@ -30,6 +30,32 @@
   }
 }
 
+.section.minimal {
+  background: none;
+  padding: 0;
+  flex: 0 0 40%;
+  margin-left: auto;
+  & > div {
+    justify-content: flex-end;
+  }
+  h2 {
+    display: none;
+  }
+  svg {
+    height: 16px;
+    width: 16px;
+    margin-bottom: 0;
+  }
+  a {
+    width: 10rem;
+  }
+  .social {
+    p {
+      display: none;
+    }
+  }
+}
+
 @media (max-width: 768px) {
   .section {
     padding: 3rem 0 5rem;
@@ -48,5 +74,8 @@
     p {
       font-size: 1.2rem;
     }
+  }
+  .section.minimal {
+    display: none;
   }
 }
