--- a/components/eligibility.module.scss
+++ b/components/eligibility.module.scss
@@ -2,7 +2,7 @@
   justify-content: space-between;
   align-items: stretch;
   margin: 3rem 0;
-  padding: 0 5rem;
+  padding: 0 5rem 3rem;
   h2 {
     margin-bottom: 5rem;
   }
@@ -92,7 +92,7 @@ button.tab_button_active {
   .section {
     background: #fff;
     padding: 0;
-    margin: 0 0 2rem;
+    margin: 0 0 3rem;
     h2 {
       margin-bottom: 4rem;
     }
