--- a/app/financial-aid/page.module.scss
+++ b/app/financial-aid/page.module.scss
@@ -1,5 +1,5 @@
 .section {
-  padding: 4rem;
+  padding: 4rem 4rem 2rem;
 }
 
 .header {
@@ -90,6 +90,9 @@
     & > div {
       padding: 4rem 2rem;
     }
+  }
+  .main {
+    padding: 6rem 0 3rem;
   }
   .item {
     gap: 2rem;
