--- a/app/not-found.module.scss
+++ b/app/not-found.module.scss
@@ -1,10 +1,11 @@
 .section {
+  padding: 4rem 0 5rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   svg {
-    height: 450px;
+    height: 400px;
     width: 600px;
   }
   button {
@@ -14,6 +15,7 @@
 
 @media (max-width: 768px) {
   .section {
+    padding: 4rem 0;
     min-height: 60vh;
     svg {
       height: 250px;
