--- a/app/partners/page.module.scss
+++ b/app/partners/page.module.scss
@@ -1,5 +1,5 @@
 .page {
-  padding: 2rem 0;
+  padding: 4rem 0 3rem;
 }
 
 .partners {
@@ -38,7 +38,7 @@
     margin-top: 1rem;
   }
   p {
-    line-height: 2;
+    line-height: 1.6;
     margin: 2rem 0 0;
     font-size: 1.6rem;
     flex: 0 0 50%;
