--- a/components/footer.module.scss
+++ b/components/footer.module.scss
@@ -48,7 +48,7 @@
     display: flex;
     color: #aaa;
     svg {
-      margin: 0 1rem;
+      margin: 0 0.75rem;
     }
     &:nth-child(2) {
       margin-left: auto;
@@ -57,6 +57,7 @@
         display: flex;
         svg {
           margin-right: 0.5rem;
+          margin-top: 0.1rem;
         }
       }
     }
@@ -65,6 +66,13 @@
 
 .heart {
   fill: #b3383e;
+}
+
+.website {
+  height: 14px;
+  width: 14px;
+  margin-right: 1rem;
+  margin-top: 0.2rem;
 }
 
 @media (max-width: 768px) {
