--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,7 +32,7 @@ h6 {
   font-family: Raleway, sans-serif;
   overflow-wrap: break-word;
   margin-bottom: 0;
-  //display: inline-block;
+  /* display: inline-block; */
   line-height: 1.3;
   color: #141517;
 }
