updated dropdown menu position in mobile

--- a/components/menu-dropdown.module.scss
+++ b/components/menu-dropdown.module.scss
@@ -39,7 +39,8 @@
     border-top: none;
   }
   .menu_dropdown {
-    left: -50%;
+    left: 0%;
+    width: 160px;
   }
   .menu_dropdown.footer {
     top: 100%;
